<resources>
    <string name="app_name">MovieApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_action">Action</string>
    <string name="menu_comedy">Comedy</string>
    <string name="menu_drama">Drama</string>
    <string name="menu_horror">Horror</string>
    <string name="rating">Rating:</string>
    <string name="directors">Directors:</string>
    <string name="description">Description:</string>
    <string name="genres">Genres:</string>
    <string name="cast">Cast:</string>
    <string name="menu_popularity">Popularity</string>
    <string name="menu_release_date">Release Date</string>
    <string name="menu_duration">Duration</string>
    <string name="menu_rating">Rating</string>
</resources>
